--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,17 @@
+:root {
+  --black: #131921;
+  --orange: #ff9f00;
+}
+
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
+  outline: none;
+  border: 0;
 }
 
 input,
@@ -13,4 +21,17 @@ button {
 
 body {
   font-family: "Poppins", sans-serif;
+}
+
+.container {
+  max-width: 98%;
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 1rem;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
