--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,6 @@
   --orange: #ff9f00;
 }
 
-
 * {
   padding: 0;
   margin: 0;
@@ -19,8 +18,13 @@ button {
   font-family: inherit;
 }
 
+img {
+  max-width: 100%;
+}
+
 body {
   font-family: "Poppins", sans-serif;
+
 }
 
 .container {
